[package]
name = "waver"
description = "waver: waveform generation library"
version = "0.1.0"
authors = ["Amr Ali <amralicc@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/amrali/waver/"
categories = ["no-std", "multimedia::audio", "science", "embedded"]
keywords = ["signal-processing", "waveform", "wave-generator", "wave"]
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
readme = "README.md"
edition = "2021"
resolver = "2"

[dependencies]
libm = "0.2"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
doc-comment = "0.3"

[profile.release]
lto = true
panic = 'abort'
